Implement optional tasks